Runtime ready for first deployment